--- a/hola.html
+++ b/hola.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        hola esta es mi nueva pagina. 
+        Esperen contenido nu PRONTO.
+    </h1>
+<H2>
+    no se cundo pero lo hare
+</H2>
 </body>
 </html>
